# configs

./: README.md  TOOLS.md  aliases.sh  data_analysis.yaml  iTermProfile.json  install.sh  uninstall.sh  vimrc
claude-code/: settings.json
git/: gitconfig  gitignore_global
python/: .flake8  pyproject.toml
shell/: aliases.sh  exports.sh  functions.sh
snippets/: python.json
ssh/: config.template
terminal/: POWERLEVEL10K_SETUP.md  iTermProfile.json  p10k.zsh  setup_p10k.sh  tmux.conf
vim/: vimrc
vscode/: keybindings.json  settings.json
vscode/snippets/: python.json
